src/index.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
}
.app-container {
  width: 100%;
  height: 100vh;
  /* position: relative; */
  background-color: #0b2434;
  display: flex;
  justify-content: center;
  align-items: center;
}

.app {
  background-color: #f5f5f5;
  height: 400px;
  width: 90%;
  max-width: 800px;
  border-radius: 5px;
  min-width: 400px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
}

.title {
  font-size: 40px;
  margin: 0;
}

.instructions {
  font-family: "Inter", sans-serif;
  font-weight: 400;
  /* margin-top: 0; */
  text-align: center;
}
.dice-container {
  display: grid;
  grid-template: auto auto / repeat(5, 1fr);
  gap: 20px;
  margin-bottom: 40px;
}

.die-face {
  height: 50px;
  width: 50px;
  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  background-color: white;
}

.die-num {
  font-size: 2rem;
}
.roll-dice {
  height: 50px;
  width: 100px;
  border: none;
  border-radius: 6px;
  background-color: #5035ff;
  color: white;
  font-size: 1.2rem;
  font-family: "Karla", sans-serif;
  cursor: pointer;
  margin-bottom: 0.5em;
}

.roll-dice:focus {
  outline: none;
}

.roll-dice:active {
  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
}

.reset-button{
  font-size: 0.8rem;

}

.count-rolls{
  margin-bottom: 0.5em;
}

